# renderizer

./: Cargo.toml
src/: basic_shader.wgsl  lib.rs  main.rs  renderizer.rs  vertex.rs
