[package]
name = "renderizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
derive = "1.0.0"
eframe = { version = "0.27.2", features = ["wgpu"] }
egui = "0.27.2"
glam = "0.27.0"
